finish styling and laying out html, fixed photo-footer.
Completed the layout and styling for the entire page. Fixed the problem with the whitespace on the photo-footer with just margins on both left and right side.

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,18 @@
 :root{
     --text-color: white;
+    --font-color: rgb(5, 0, 78);
+    --button-color: #596D48;
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
     display: flex;
     min-height: 100vh;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 
 @font-face{
@@ -23,6 +28,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex-shrink: 0;
 }
 .photo-text-container{
     display: flex;
@@ -31,9 +37,10 @@ body{
     background-color: rgba(0, 0, 0, 0.562);
     position: relative;
     top: 22%;
+    padding: 16px 0;
 }
 .left-side > .photo-text-container > img{
-    width: 22%;
+    width: 20%;
     height: auto;
 }
 
@@ -51,7 +58,94 @@ body{
     position: relative;
     bottom: 0;
 }
+.photo-footer a{
+    margin: 0 4px;
+}
+
 .photo-footer a:visited, .photo-footer a:link{
     color: var(--text-color);
 }
 
+.right-side{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+
+}
+
+.right-side > * {
+    padding: 0 20vw 0 3vw;
+}
+
+.call-to-action{
+    font-size: 1.6rem;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 8vh;
+}
+
+.call-to-action p{
+    margin-bottom: 2vh;
+}
+
+form{
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.123);
+    margin-bottom: 2em;
+    border-radius: 3px;
+    color: var(--font-color);
+}
+form .section{
+    display: flex;
+    gap: clamp(2vw, 5vw, 16vw);
+}
+form .section > div {
+    display: flex;
+    flex-direction: column;
+}
+form .section > div > label{
+    letter-spacing: 0.12rem;
+    font-weight: 600;
+    font-size: 0.75rem;
+}
+
+form .section > div > input {
+    margin-bottom: 1.3em;
+    border: 1px solid #E5E7EB;
+    border-radius: 4px;
+    font-size: 1.2rem;
+    font-weight: 200;
+    padding: 4px;
+}
+
+form h2{
+    margin-bottom: 3vh;
+}
+
+button{
+    padding: 1vh 2vw;
+    position: relative;
+    color: var(--text-color);
+    background-color: var(--button-color);
+    border: 0;
+    border-radius: 6px;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.103);
+    margin-bottom: 3vh;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.log-in{
+    color: var(--button-color);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+#password:invalid, #confirm-pass:invalid, #email:invalid{
+    border: 1px solid red;
+}
+
+input:focus{
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.144);
+}
